<resources>
    <string name="app_name">BmiDieasesTracker</string>
    <string name="please_wait">Please wait..</string>
    <string name="session_expired">Session Expired</string>
    <string name="ok">OK</string>
    <string name="welcome_text">BMI Disease Tracker</string>
    <string name="connections">Connections</string>
    <string name="applications">Application</string>
    <string name="devices">Devices</string>
    <string name="choose_one_of_the_apps">Choose one of the apps</string>
    <string name="connect">Connect</string>
    <string name="google_fit">Google Fit</string>
    <string name="samsung_h">Samsung H</string>
    <string name="mi_fit">Mi Fit</string>
    <string name="garmin_c">Garmin C</string>
    <string name="warning">Warning!</string>
    <string name="please_read_the_following">(Please read the following)</string>
    <string name="first_screen_warning"><font color="#FFCED1D1">Our service is not a medical service.</font> \n\nOur services are second / third opinions based on artificial intelligence algorithms and statistics. We provide diagnostics only of the likelihood of developing diseases based on data on the health status of people with similar parameters.</string>
    <string name="second_screen_warning"><font color="#FFCED1D1">Our service is not a medical service.</font> \n\nOur services service is not a substitute for professional medical care.if you have or suspect that may you have health problems,please consult your doctor.</string>
    <string name="third_screen_warning"><font color="#FFCED1D1">Our service is not a medical service.</font> \n\nConsult a specialist for advice. The information provided in this application is for informational purpose only and should not be used for diagnosis or treatment.</string>
    <string name="come_in">Come In</string>
    <string name="don_t_show_again_show">Don\'t show again show  </string>
    <string name="level_of_risk">Level Of Risk</string>
    <string name="middle">Middle</string>
    <string name="body_mass_index">Body mass index is a value that allows you to assess the degree of correspondence between a person\'s weight and his height.</string>
    <string name="_60">60%</string>
    <string name="probility_dying">The probability of dying in the next 10 yers from cardiovascular diseases.</string>
    <string name="consult_a_specialist_it_is_not_a_medical_application">Consult a specialist. It is not a medical application.</string>
    <string name="your_cancer_risks_are_same_like_other_people_with_normal_weight">Your cancer risks are same like other people with normal weight.</string>
    <string name="view_report">View Report</string>
    <string name="data_available">(Data Available)</string>
    <string name="congratulations_non_your_decision_to_quit_your_s_bad_habit">Congratulations\non your decision to quit your\'s bad habit!</string>
    <string name="when_did_you_quit">When did you quit?</string>
    <string name="_17_september_2021_05_12_pm">17 September 2021, 05:12 PM</string>
    <string name="set_tracker">Set Tracker</string>
    <string name="progress">Progress</string>
    <string name="enjoying_quit_tracker">Enjoying Quit Tracker?</string>
    <string name="day_1">Day 1</string>
    <string name="smoke_free">Smoke Free</string>
    <string name="today">Today</string>

</resources>