<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_waring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/warning"
        style="@style/P1Bold"
        android:textColor="@color/blue"
        android:textSize="22sp"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_waring"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/please_read_the_following"
        style="@style/P1Medium"
        android:textColor="@color/black"
        android:textSize="22sp"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="27dp"
        android:layout_marginTop="30dp"
        android:textSize="15sp"
        android:gravity="center"
        style="@style/P1Medium"
        app:layout_constraintTop_toBottomOf="@id/txt_read"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:lineSpacingExtra="4dp"
        android:text="@string/third_screen_warning"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtInfo"
        android:layout_marginTop="75dp"
        >
        <TextView
            android:id="@+id/txtDontShow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:gravity="center"
            style="@style/P1Medium"
            android:text="@string/don_t_show_again_show"
            android:drawableEnd="@drawable/ic_switch_on"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>




    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="167dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/warning_curve"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtComeIn"
            android:layout_width="102dp"
            android:layout_height="30dp"
            android:text="@string/come_in"
            style="@style/text_connect"
            android:textColor="@color/black"
            android:gravity="center"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/white_rounded_button_bg"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>