<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtCong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:textSize="19sp"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        style="@style/P1Bold"
        android:lineSpacingExtra="4sp"
        android:text="@string/congratulations_non_your_decision_to_quit_your_s_bad_habit"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtQuit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtCong"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:textSize="15sp"
        android:textColor="@color/black"
        style="@style/P1Medium"
        android:lineSpacingExtra="4sp"
        android:text="@string/when_did_you_quit"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clTimePicker"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/txtQuit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:minWidth="300dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/light_green_view_bg"
        >
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/_17_september_2021_05_12_pm"
            android:textColor="@color/white"
            android:textSize="16sp"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clSetTimeTracker"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/clTimePicker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:minWidth="300dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/light_green_view_bg"
        >
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/set_tracker"
            android:textColor="@color/white"
            android:textSize="16sp"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>





</androidx.constraintlayout.widget.ConstraintLayout>