<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clPercentage_Diease"
        android:layout_width="0dp"
        android:layout_height="130dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/red_border_bg"
        android:layout_marginTop="30dp"
        >
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="21dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toStartOf="@id/clPercentage"
            android:gravity="center_horizontal"
            android:text="@string/probility_dying"
            android:textColor="@color/black"
            android:lineSpacingExtra="4sp"
            style="@style/P1Medium"
            android:textSize="17sp"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clPercentage"
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/red">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/_60"
                android:textColor="@color/white"
                android:lineSpacingExtra="4sp"
                style="@style/P1Medium"
                android:textSize="18sp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_cancer"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clPercentage_Diease"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/green_border_bg"
        android:layout_marginTop="30dp"
        >
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="21dp"
            android:layout_marginEnd="21dp"
            android:gravity="center_horizontal"
            android:text="@string/your_cancer_risks_are_same_like_other_people_with_normal_weight"
            android:textColor="@color/black"
            android:lineSpacingExtra="4sp"
            style="@style/P1Medium"
            android:textSize="17sp"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clViewReport"
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_cancer"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/small_rounded_blue_bg"
        android:layout_marginTop="30dp"
        >
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtViewReport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="17dp"
            android:gravity="center_horizontal"
            android:text="@string/view_report"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:lineSpacingExtra="3sp"
            style="@style/P1Medium"
            android:textSize="17sp"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txtViewReport"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="17dp"
            android:gravity="center_horizontal"
            android:text="@string/data_available"
            android:layout_marginTop="3dp"
            android:textColor="@color/white"
            android:lineSpacingExtra="3sp"
            style="@style/P1Medium"
            android:textSize="13sp"
            />
        
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            app:srcCompat="@drawable/ic_forward"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="21dp"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clViewReport"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:text="@string/consult_a_specialist_it_is_not_a_medical_application"
        android:textColor="@color/grey"
        android:lineSpacingExtra="3sp"
        android:gravity="center_horizontal"
        android:textSize="16sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>