<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    <LinearLayout
        android:id="@+id/llData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clGoogleFit"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:minHeight="150dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtChooseApp"
            android:background="@drawable/grey_rounded_corner_bg"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgType"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/ic_level_of_risk"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtDataType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level_of_risk"
                android:textColor="@color/black"
                android:textSize="13sp"
                app:layout_constraintTop_toBottomOf="@id/imgType"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtTypeQuantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/middle"
                    android:textSize="16sp"
                    android:textColor="@color/yellow"
                    app:layout_constraintTop_toBottomOf="@id/txtDataType"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="10sp"
                    />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/body_mass_index"
                android:textSize="14sp"
                android:visibility="gone"
                android:textColor="@color/black"
                android:gravity="center_horizontal"
                app:layout_constraintTop_toBottomOf="@id/txtTypeQuantity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="10sp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


